# model_converter

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/Computations/: Computations.cpp  Computations.hpp
src/Converter/: ModelConverter.cpp  ModelConverter.hpp
src/Parser/: ModelParser.cpp  ModelParser.hpp  ObjParser.cpp  ObjParser.hpp  StringMethods.hpp
src/Printer/: ModelPrinter.cpp  ModelPrinter.hpp  STLPrinter.cpp  STLPrinter.hpp
src/Types/: Model.cpp  Model.hpp
test/: AssertionHelper.hpp  CMakeLists.txt  ComputationsTest.cpp  ModelConverterTest.cpp  ObjParserTest.cpp  StringMethodsTest.cpp  main.cpp  test1.cpp
